--- a/toktik-frontend/package.json
+++ b/toktik-frontend/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.428.0",
     "@babel/polyfill": "^7.11.5",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.17.3",
