--- a/toktik-frontend/.env.sample
+++ b/toktik-frontend/.env.sample
@@ -1,5 +1,1 @@
-VUE_APP_S3_ACCESS_KEY_ID="<access key>"
-VUE_APP_S3_SECRET_ACCESS_KEY="<secret key>"
-VUE_APP_S3_RAW_ENDPOINT="<raw endpoint>"
-VUE_APP_S3_BUCKET_NAME="<bucket name>"
-VUE_APP_S3_REGION="<region>"
+VUE_APP_BACKEND_HOST="loalhost:<port>"
