--- a/toktik-frontend/package.json
+++ b/toktik-frontend/package.json
@@ -20,8 +20,8 @@
     "portal-vue": "^2.1.7",
     "uuid": "^9.0.1",
     "vue": "^2.6.14",
-    "vue-router": "3.5.2",
     "vue-axios": "^3.5.2",
+    "vue-router": "3.5.2",
     "webpack": "^5.89.0"
   },
   "devDependencies": {
@@ -36,6 +36,7 @@
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "vue-cli-plugin-bootstrap-vue": "~0.8.2",
+    "vue-cli-plugin-store": "~0.0.7",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
