--- a/.github/workflows/build-frontend.yaml
+++ b/.github/workflows/build-frontend.yaml
@@ -28,9 +28,13 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Get short SHA
+        id: vars
+        run: echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+
       - name: Build and push Docker image
         run: |
           docker buildx build --push \
-              -t ghcr.io/${{ github.repository }}:${{ github.sha[0:6] }} \
+              -t ghcr.io/${{ github.repository }}:${{ steps.vars.outputs.sha_short }} \
               -t ghcr.io/${{ github.repository }}:latest \
               .
