--- a/.github/workflows/build-frontend.yaml
+++ b/.github/workflows/build-frontend.yaml
@@ -37,4 +37,4 @@ jobs:
           docker buildx build --push \
               -t ghcr.io/${{ github.repository }}:${{ steps.vars.outputs.sha_short }} \
               -t ghcr.io/${{ github.repository }}:latest \
-              .
+              ./toktik-frontend/
