--- a/.github/workflows/build-frontend.yaml
+++ b/.github/workflows/build-frontend.yaml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - deployment
 
 jobs:
   build-and-release:
@@ -34,6 +35,7 @@ jobs:
       - name: Build and push Docker image
         run: |
           docker buildx build --push \
-              -t ghcr.io/${{ github.repository }}:${{ steps.vars.outputs.sha_short }} \
-              -t ghcr.io/${{ github.repository }}:latest \
-              ./toktik-frontend/
+            --platform linux/amd64,linux/arm64/v8 \
+            -t ghcr.io/${{ github.repository }}:${{ steps.vars.outputs.sha_short }} \
+            -t ghcr.io/${{ github.repository }}:latest \
+            ./toktik-frontend/
