--- a/toktik-frontend/package.json
+++ b/toktik-frontend/package.json
@@ -19,6 +19,8 @@
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
     "uuid": "^9.0.1",
+    "video.js": "^8.6.0",
+    "videojs-contrib-hls": "^5.15.0",
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
     "vue-router": "3.5.2",
