--- a/.github/workflows/build-frontend.yaml
+++ b/.github/workflows/build-frontend.yaml
@@ -20,7 +20,7 @@ jobs:
       - name: Login to ghcr.io
         uses: docker/login-action@v3
         with:
-          registry: ghcr.io
+          registry: ghcr.io,docker.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
