--- a/toktik-frontend/package.json
+++ b/toktik-frontend/package.json
@@ -18,6 +18,7 @@
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
+    "socketio": "^1.0.0",
     "uuid": "^9.0.1",
     "video.js": "^8.6.0",
     "videojs-contrib-hls": "^5.15.0",
