--- a/toktik-frontend/package.json
+++ b/toktik-frontend/package.json
@@ -18,6 +18,8 @@
     "mutationobserver-shim": "^0.3.7",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
+    "socket.io": "^4.7.2",
+    "socket.io-client": "^4.7.2",
     "socketio": "^1.0.0",
     "uuid": "^9.0.1",
     "video.js": "^8.6.0",
@@ -25,6 +27,7 @@
     "vue": "^2.6.14",
     "vue-axios": "^3.5.2",
     "vue-router": "3.5.2",
+    "vue-socket.io": "^3.0.10",
     "webpack": "^5.89.0"
   },
   "devDependencies": {
